wip: update config

--- a/.envrc
+++ b/.envrc
@@ -14,8 +14,8 @@ PROJECT_ROOT=$(git rev-parse --show-toplevel 2>/dev/null)
 export BASE_DOMAIN=dokaseca.local
 # Kubernetes
 # Ensure you have the correct kubeconfig files in the specified directory
-export KUBECONFIG_DIR="$PROJECT_ROOT/kubeconfigs"
-export KUBECONFIG="$KUBECONFIG_DIR/hub-dev:$KUBECONFIG_DIR/spokes-dev:$KUBECONFIG_DIR/spokes-stg:$KUBECONFIG_DIR/spokes-prod"
+export KUBECONFIG_DIR="$PROJECT_ROOT/kubeconfigs/hub-spoke"
+export KUBECONFIG="$KUBECONFIG_DIR/hub:$KUBECONFIG_DIR/spoke-dev:/Users/noels/IdeaProjects/ivylen-gitops/dokaseca-control-plane/kubeconfigs/hub-spoke/hub"
 # Cluster
 export CLUSTER_TOPOLOGY=true
 # Minio
